alignment problem solve

--- a/style/style.css
+++ b/style/style.css
@@ -43,9 +43,14 @@ body{
     text-align: center;
 }
 
+/* main section */
+
 .main-section {
     margin-top: 120px;
     width: 1320px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
 }
 
 .main-section .offer-section h1 {
